# adk-agentic-writer

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.sh
examples/: interactive_demo.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: frontend.html  index.html  showcase.html
frontend/src/: App.css  App.tsx
src/adk_agentic_writer/: __init__.py
src/adk_agentic_writer/agents/: __init__.py  base_agent.py  coordinator.py  game_designer.py  quiz_writer.py  reviewer.py  simulation_designer.py  stateful_agent.py  story_writer.py
src/adk_agentic_writer/backend/: __init__.py  api.py
src/adk_agentic_writer/models/: README.md  __init__.py  agent_models.py  content_models.py  editorial_models.py
src/adk_agentic_writer/protocols/: README.md  STRUCTURE.md  __init__.py  agent_protocol.py  content_protocol.py  editorial_protocol.py
src/adk_agentic_writer/runtime/: __init__.py  agent_runtime.py
src/adk_agentic_writer/tasks/: README.md  __init__.py  content_tasks.py  editorial_tasks.py
src/adk_agentic_writer/teams/: README.md  __init__.py  (+2 more)
tests/: README.md  __init__.py  conftest.py
tests/integration/: __init__.py  test_adk.py  test_all_content_types.py  test_all_formats.py  test_api.py  test_demo_static.py  test_strategy_protocol.py
tests/unit/: __init__.py  test_agent_models.py  test_base_agent.py  test_content_models.py  test_quiz_writer.py
(+25 files in other folders)
